--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   <head>
     <script src="react-0.13.3/build/react.js"></script>
     <script src="react-0.13.3/build/JSXTransformer.js"></script>
+    <script type="text/jsx" src="src/helloworld.js"></script>
   </head>
   <body>
-    <div id="example"></div>
-    <script type="text/jsx">
-      React.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-      );
-    </script>
+    <div id="root"></div>
   </body>
 </html>
