--- a/helloworld.html
+++ b/helloworld.html
@@ -3,6 +3,7 @@
   <head>
     <script src="react-0.13.3/build/react.js"></script>
     <script src="react-0.13.3/build/JSXTransformer.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
   </head>
   <body>
     <div id="example"></div>
