--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script src="react-0.13.3/build/react.js"></script>
     <script src="react-0.13.3/build/JSXTransformer.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+
     <script type="text/jsx" src="src/helloworld.js"></script>
   </head>
   <body>
