--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <script type="text/jsx" src="src/helloworld.js"></script>
   </head>
   <body>
+  	<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+  	<a class="navbar-brand" href="#">Kumquat</a>
+  	<ul class="nav navbar-nav">
+  	<li><a href="#">Learn More</a></li>
+  	<li><a href="#">Contact</a></li>
+  </ul>
+    	<ul class="nav navbar-nav navbar-right">
+
+  	<button type="button" class="btn align-right btn-default navbar-btn">Sign in</button>
+</ul>
+  </div>
+</nav>
     <div id="root"></div>
   </body>
 </html>
