--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/jsx" src="src/helloworld.js"></script>
   </head>
   <body>
-  	<nav class="navbar navbar-default navbar-fixed-top">
+  	<nav class="navbar hidden-nav navbar-default navbar-fixed-top">
       <div class="container">
       	<a class="navbar-brand" href="#">Kumquat</a>
       	<ul class="nav navbar-nav">
