--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="src/typed.js"></script>
+    <script src="//simplewebrtc.com/latest.js"></script> 
     <link rel="stylesheet" type="text/css" href="typed.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="main.css">
