--- a/home.html
+++ b/home.html
@@ -7,9 +7,12 @@
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="src/typed.js"></script>
-    <script src="//simplewebrtc.com/latest.js"></script> 
+    <script src="//simplewebrtc.com/latest.js"></script>
+    <script type ="text/javascript" src="bower_components/loaders.css/loaders.css.js"></script> 
     <link rel="stylesheet" type="text/css" href="typed.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/loaders.css/loaders.min.css">
+
     <link rel="stylesheet" type="text/css" href="main.css">
 
     <script type="text/jsx" src="src/helloworld.js"></script>
