--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" /> 
     <script src="react-0.13.3/build/react.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="react-0.13.3/build/JSXTransformer.js"></script>
@@ -22,10 +23,24 @@
       	<a class="navbar-brand" href="#">Kumquat</a>
       	<ul class="nav navbar-nav">
         	<li><a href="#">Learn More</a></li>
+          <li><a href="#">Attorneys</a></li>
         	<li><a href="#">Contact</a></li>
         </ul>
       	<ul class="nav navbar-nav navbar-right">
         	<button type="button" class="btn align-right btn-default navbar-btn">Sign in</button>
+          <div class="btn-group">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                English <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">English</a></li>
+                <li><a href="#">Español</a></li>
+                <li><a href="#">中文</a></li>
+                <li><a href="#">Russian</a></li>
+                <li><a href="#">한국</a></li>
+                <li><a href="#"></a></li>
+              </ul>
+          </div>
         </ul>
       </div>
     </nav>
